--- a/stocker_pro/templates/index.html
+++ b/stocker_pro/templates/index.html
@@ -19,9 +19,9 @@
         <link href="https://cdn.js delivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
         <!-- Libraries Stylesheet -->
-        <link rel="stylesheet" href="lib/animate/animate.min.css"/>
-        <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
-        <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="{% static 'lib/animate/animate.min.css' %}"/>
+        <link href="{% static 'lib/lightbox/css/lightbox.min.css' %}" rel="stylesheet">
+        <link href="{% static 'lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
 
 
         <!-- Customized Bootstrap Stylesheet -->
@@ -969,14 +969,14 @@
 
         
         <!-- JavaScript Libraries -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js "></script>
-        <script src="https://cdn.js delivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js "></script>
-        <script src="{%  static '/wow/wow.min.js' %}"></script>
-        <script src="{%  static '/easing/easing.min.js' %}"></script>
-        <script src="{%  static '/waypoints/waypoints.min.js' %}"></script>
-        <script src="{%  static '/counterup/counterup.min.js' %}"></script>
-        <script src="{%  static '/lightbox/js/lightbox.min.js' %}"></script>
-        <script src="{%  static '/owlcarousel/owl.carousel.min.js' %}"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+        <script src="https://cdn.js delivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="{%  static 'lib/wow/wow.min.js' %}"></script>
+        <script src="{%  static 'lib/easing/easing.min.js' %}"></script>
+        <script src="{%  static 'lib/waypoints/waypoints.min.js' %}"></script>
+        <script src="{%  static 'lib/counterup/counterup.min.js' %}"></script>
+        <script src="{%  static 'lib/lightbox/js/lightbox.min.js' %}"></script>
+        <script src="{%  static 'lib/owlcarousel/owl.carousel.min.js' %}"></script>
         
 
         <!-- Template Javascript -->
